- DI Dagger is added  - new App Architecture approach (Dagger+ViewModel+LiveData) from Nikita is implemented.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_lpg">Lpg</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="all_ok">Ok</string>
 </resources>
