--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">Car Expenses</string>
     <string name="title_lpg">Lpg</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_petrol">Petrol</string>
+    <string name="title_service">Service</string>
+    <string name="all_not_implemented_yet">Not Implemented Yet</string>
     <string name="all_ok">Ok</string>
 </resources>
