- implemented: RefillList screen  - new field: DB.Refill fuelType - LPG, PETROL  - implemented: ProgressBar handling    * RxUtils.applyProgressBar methods are created  - Timber lib is added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="title_service">Service</string>
     <string name="all_not_implemented_yet">Not Implemented Yet</string>
     <string name="all_ok">Ok</string>
+    <string name="all_date">Date</string>
+    <string name="all_l">L</string>
+    <string name="all_l_per_100km">L/100Km</string>
+    <string name="all_traffic">Traffic</string>
+    <string name="all_note">Note</string>
 </resources>
