--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,28 @@
 <resources>
     <string name="app_name">Car Expenses</string>
+    <string name="all_ok">Ok</string>
+    <string name="all_done">Done</string>
+    <string name="all_date">Date</string>
+    <string name="all_delete">Delete</string>
+    <string name="all_not_implemented_yet">Not Implemented Yet</string>
+    <string name="all_l">L</string>
+    <string name="all_traffic">Traffic</string>
+    <string name="all_note">Note</string>
+    <string name="all_highway">Highway</string>
+    <string name="all_mixed">Mixed</string>
+    <string name="all_consumption">Consumption</string>
+    <string name="all_city">City</string>
+    <string name="all_liters">Liters</string>
+    <string name="all_money">Money</string>
+
+    <string name="list_title_refills">Refills</string>
+
+    <string name="refill_details_l_per_100km">L/100Km</string>
+    <string name="refill_details_last_distance">Last Distance</string>
+    <string name="refill_details_0_l_100km">0 l/100km</string>
+
     <string name="title_lpg">Lpg</string>
     <string name="title_petrol">Petrol</string>
     <string name="title_service">Service</string>
-    <string name="all_not_implemented_yet">Not Implemented Yet</string>
-    <string name="all_ok">Ok</string>
-    <string name="all_date">Date</string>
-    <string name="all_l">L</string>
-    <string name="all_l_per_100km">L/100Km</string>
-    <string name="all_traffic">Traffic</string>
-    <string name="all_note">Note</string>
+
 </resources>
