--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
 
     <string name="refill_details_l_per_100km">L/100Km</string>
     <string name="refill_details_last_distance">Last Distance</string>
+    <string name="refill_details_current_mileage">Current Mileage</string>
     <string name="refill_details_0_l_100km">0 l/100km</string>
     <string name="refill_details_add_note">Add Note</string>
 
