- implemented: "All Fuel Types List screen"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="all_not_implemented_yet">Not Implemented Yet</string>
     <string name="all_l">L</string>
     <string name="all_traffic">Traffic</string>
+    <string name="all_fuel">Fuel</string>
     <string name="all_note">Note</string>
     <string name="all_highway">Highway</string>
     <string name="all_mixed">Mixed</string>
