--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
     <string name="refill_list_summary_title">Summary:</string>
     <string name="refill_list_summary_text">Avg: %1$dl/100, dist: %2$dkm, %3$dl, %4$dUAH</string>
     <string name="refill_list_all_summary_text">AvgLPG: %1$dl/100, AvgPetrol: %2$dl/100\nDist: %3$dkm, Money: %4$dUAH</string>
+    <string name="refill_list_create_backup_menu">Create Backup</string>
+    <string name="refill_list_restore_backup_menu">Restore Backup</string>
 
     <string name="refill_details_title">Refill Details</string>
     <string name="refill_details_title_new_entry">New Entry</string>
@@ -37,5 +39,7 @@
     <string name="title_petrol">Petrol</string>
     <string name="title_all">All</string>
     <string name="all_not_implemented">Not Implemented</string>
+    <string name="cancel">Cancel</string>
+    <string name="grand">Grand</string>
 
 </resources>
